- Fixed bug #53893 (Wrong return value for ZipArchive::extractTo())