ext/zip/tests/bug53603.phpt
@@ -29,10 +29,7 @@ $a = $zip->extractTo('teststream://test');
 var_dump($a);
 
 --EXPECTF--
+
 Warning: ZipArchive::extractTo(teststream://test/foo): failed to open stream: "TestStream::stream_open" call failed in %s on line %d
-
-Warning: ZipArchive::extractTo(teststream://test/bar): failed to open stream: "TestStream::stream_open" call failed in %s on line %d
-
-Warning: ZipArchive::extractTo(teststream://test/foobar/baz): failed to open stream: "TestStream::stream_open" call failed in %s on line %d
-bool(true)
+bool(false)
 
